observability-driven-gitops-release-system/gitops/acme/base/payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  labels:
    app.kubernetes.io/name: payment
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: payment
  template:
    metadata:
      labels:
        app.kubernetes.io/name: payment
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: payment
        image: acme/payment
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet: { path: /readyz, port: http }
          initialDelaySeconds: 3
          periodSeconds: 10
        livenessProbe:
          httpGet: { path: /healthz, port: http }
          initialDelaySeconds: 5
          periodSeconds: 15
        resources:
          requests: { cpu: 50m, memory: 64Mi }
          limits: { memory: 128Mi }
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop: [ "ALL" ]
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  labels:
    app.kubernetes.io/name: payment
spec:
  selector:
    app.kubernetes.io/name: payment
  ports:
  - name: http
    port: 8080
    targetPort: http
